--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -196,7 +196,11 @@
       "processed  1820 milestones\n",
       "processed  1830 milestones\n",
       "processed  1840 milestones\n",
-      "processed  1850 milestones\n"
+      "processed  1850 milestones\n",
+      "processed  1860 milestones\n",
+      "processed  1870 milestones\n",
+      "processed  1880 milestones\n",
+      "processed  1890 milestones\n"
      ]
     }
    ],
@@ -293,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "id": "88a367db",
    "metadata": {},
    "outputs": [
@@ -358,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "f5b15585",
    "metadata": {},
    "outputs": [],
@@ -381,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "id": "a56544a8",
    "metadata": {},
    "outputs": [
@@ -389,88 +393,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"NL.4.1+NL.4.1.1\"\n",
-      "['NL.4.1.1', 'sars-cov-2-variants/lineage-proposals#2342']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"JN.1.59.1+NK.1+NL.1+XEJ.2+KP.4.2.6+NL.5.2\"\n",
-      "['NL.5.2', 'sars-cov-2-variants/lineage-proposals#1771']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"NL.9\"\n",
-      "['NL.9', 'sars-cov-2-variants/lineage-proposals#2429']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LP.8.1+LP.8.2+LP.8.1.1+NY.1+NY.3+NY.6+NY.7+NY.8+LP.8.1.2+LP.8.1.6+LP.8.1.9+NW.1+LP.8.1.3+LP.8.1.6+LP.8.2.1\"\n",
-      "['NY.7', 'sars-cov-2-variants/lineage-proposals#2199']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.2.6.4\"\n",
-      "['KP.2.6.4', 'sars-cov-2-variants/lineage-proposals#2339']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.2.25.2+KP.2.28\"\n",
-      "['KP.2.28', 'sars-cov-2-variants/lineage-proposals#1768']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MC.1.7\"\n",
-      "['MC.1.7', 'sars-cov-2-variants/lineage-proposals#2195']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MC.6.1\"\n",
-      "['MC.6.1', 'sars-cov-2-variants/lineage-proposals#2147']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MC.9.1\"\n",
-      "['MC.9.1', 'sars-cov-2-variants/lineage-proposals#2064']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MC.32.1\"\n",
-      "['MC.32.1', 'sars-cov-2-variants/lineage-proposals#2340']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MC.38\"\n",
-      "['MC.38', 'sars-cov-2-variants/lineage-proposals#2414']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MC.40.1\"\n",
-      "['MC.40.1', 'sars-cov-2-variants/lineage-proposals#2394']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MR.2\"\n",
-      "['MR.2', 'sars-cov-2-variants/lineage-proposals#2089']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.3.3.9\"\n",
-      "['KP.3.3.9', 'sars-cov-2-variants/lineage-proposals#2252']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"NT.2\"\n",
-      "['NT.2', 'sars-cov-2-variants/lineage-proposals#2426']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LF.7.1.4\"\n",
-      "['LF.7.1.4', 'sars-cov-2-variants/lineage-proposals#2211']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LF.7.1.5\"\n",
-      "['LF.7.1.5', 'sars-cov-2-variants/lineage-proposals#2329']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LF.7.3.2\"\n",
-      "['LF.7.3.2', 'sars-cov-2-variants/lineage-proposals#2371']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LF.7.3.3\"\n",
-      "['LF.7.3.3', 'sars-cov-2-variants/lineage-proposals#2386']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LF.7.7.1\"\n",
-      "['LF.7.7.1', 'sars-cov-2-variants/lineage-proposals#2215']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LF.7.7.2\"\n",
-      "['LF.7.7.2', 'sars-cov-2-variants/lineage-proposals#2349']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LF.7.8\"\n",
-      "['LF.7.8', 'sars-cov-2-variants/lineage-proposals#2392']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LF.7.9\"\n",
-      "['LF.7.9', 'sars-cov-2-variants/lineage-proposals#2473']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"ND.1.1.3\"\n",
-      "['ND.1.1.3', 'sars-cov-2-variants/lineage-proposals#2326']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LF.7.6.2+LS.2\"\n",
-      "['LS.2', 'sars-cov-2-variants/lineage-proposals#2346']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MD.1.1.2\"\n",
-      "['MD.1.1.2', 'sars-cov-2-variants/lineage-proposals#2399']\n",
-      "https://github.com/cov-lineages/pango-designation/issues?q=milestone:\"JH.1+JH.2\"\n",
-      "['JH.2', '#2068']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"NB.1.6\"\n",
-      "['NB.1.6', 'sars-cov-2-variants/lineage-proposals#2363']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"NB.1.7\"\n",
-      "['NB.1.7', 'sars-cov-2-variants/lineage-proposals#2418']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"NB.1.8+NB.1.8.1\"\n",
-      "['NB.1.8', 'sars-cov-2-variants/lineage-proposals#2431']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"NB.1.8+NB.1.8.1\"\n",
-      "['NB.1.8.1', 'sars-cov-2-variants/lineage-proposals#2431']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"XDY.2+XDY.4\"\n",
-      "['XDY.4', 'sars-cov-2-variants/lineage-proposals#1784']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"XEC.3+XEC.5+XEC.6+XEC.7+XEC.8.1+XEC.10+XEC.11+XEC.11.1+XEC.13+XEC.16+XEC.17+XEC.20.1+XEC.21+XEC.22+XEC.24.1+XEK.4+XEK.6\"\n",
-      "['XEC.8.1', 'sars-cov-2-variants/lineage-proposals#2088']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"XEC.3+XEC.5+XEC.6+XEC.7+XEC.8.1+XEC.10+XEC.11+XEC.11.1+XEC.13+XEC.16+XEC.17+XEC.20.1+XEC.21+XEC.22+XEC.24.1+XEK.4+XEK.6\"\n",
-      "['XEC.11.1', 'sars-cov-2-variants/lineage-proposals#2088']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"XEC.3+XEC.5+XEC.6+XEC.7+XEC.8.1+XEC.10+XEC.11+XEC.11.1+XEC.13+XEC.16+XEC.17+XEC.20.1+XEC.21+XEC.22+XEC.24.1+XEK.4+XEK.6\"\n",
-      "['XEC.20.1', 'sars-cov-2-variants/lineage-proposals#2088']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"XEC.3+XEC.5+XEC.6+XEC.7+XEC.8.1+XEC.10+XEC.11+XEC.11.1+XEC.13+XEC.16+XEC.17+XEC.20.1+XEC.21+XEC.22+XEC.24.1+XEK.4+XEK.6\"\n",
-      "['XEC.22', 'sars-cov-2-variants/lineage-proposals#2088']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"XEC.3+XEC.5+XEC.6+XEC.7+XEC.8.1+XEC.10+XEC.11+XEC.11.1+XEC.13+XEC.16+XEC.17+XEC.20.1+XEC.21+XEC.22+XEC.24.1+XEK.4+XEK.6\"\n",
-      "['XEC.24.1', 'sars-cov-2-variants/lineage-proposals#2088']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"XEC.25.1\"\n",
-      "['XEC.25.1', 'sars-cov-2-variants/lineage-proposals#2485']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"XEF.1\"\n",
-      "['XEF.1', 'sars-cov-2-variants/lineage-proposals#2130']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"XEF.2\"\n",
-      "['XEF.2', 'sars-cov-2-variants/lineage-proposals#2131']\n",
-      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"XEF.3\"\n",
-      "['XEF.3', 'sars-cov-2-variants/lineage-proposals#2305']\n"
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"NL.3.1\"\n",
+      "['NL.3.1', 'sars-cov-2-variants/lineage-proposals#2420']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"NL.13\"\n",
+      "['NL.13', 'sars-cov-2-variants/lineage-proposals#2440']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LP.8.1+LP.8.2+LP.8.1.1+NY.1+NY.3+NY.6+NY.7+NY.8+NY.9+NY.10+NY.11+NY.12+LP.8.1.2+LP.8.1.6+PF.1+LP.8.1.9+NW.1+LP.8.1.3+LP.8.1.6+LP.8.2.1+PD.1\"\n",
+      "['NY.9', 'sars-cov-2-variants/lineage-proposals#2199']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LP.8.1+LP.8.2+LP.8.1.1+NY.1+NY.3+NY.6+NY.7+NY.8+NY.9+NY.10+NY.11+NY.12+LP.8.1.2+LP.8.1.6+PF.1+LP.8.1.9+NW.1+LP.8.1.3+LP.8.1.6+LP.8.2.1+PD.1\"\n",
+      "['NY.10', 'sars-cov-2-variants/lineage-proposals#2199']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LP.8.1+LP.8.2+LP.8.1.1+NY.1+NY.3+NY.6+NY.7+NY.8+NY.9+NY.10+NY.11+NY.12+LP.8.1.2+LP.8.1.6+PF.1+LP.8.1.9+NW.1+LP.8.1.3+LP.8.1.6+LP.8.2.1+PD.1\"\n",
+      "['NY.11', 'sars-cov-2-variants/lineage-proposals#2199']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LP.8.1+LP.8.2+LP.8.1.1+NY.1+NY.3+NY.6+NY.7+NY.8+NY.9+NY.10+NY.11+NY.12+LP.8.1.2+LP.8.1.6+PF.1+LP.8.1.9+NW.1+LP.8.1.3+LP.8.1.6+LP.8.2.1+PD.1\"\n",
+      "['PD.1', 'sars-cov-2-variants/lineage-proposals#2199']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MC.1.4.1\"\n",
+      "['MC.1.4.1', 'sars-cov-2-variants/lineage-proposals#2196']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"PA.1.1\"\n",
+      "['PA.1.1', 'sars-cov-2-variants/lineage-proposals#2475']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"PA.1.2\"\n",
+      "['PA.1.2', 'sars-cov-2-variants/lineage-proposals#2453']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"PE.1\"\n",
+      "['PE.1', 'sars-cov-2-variants/lineage-proposals#2409']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MC.13.2.2\"\n",
+      "['MC.13.2.2', 'sars-cov-2-variants/lineage-proposals#2427']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"PG.1\"\n",
+      "['PG.1', 'sars-cov-2-variants/lineage-proposals#2434']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"PG.2\"\n",
+      "['PG.2', 'sars-cov-2-variants/lineage-proposals#2438']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LF.7.1.7\"\n",
+      "['LF.7.1.7', 'sars-cov-2-variants/lineage-proposals#2474']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"PC.2\"\n",
+      "['PC.2', 'sars-cov-2-variants/lineage-proposals#2456']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MV.1.1.1\"\n",
+      "['MV.1.1.1', 'sars-cov-2-variants/lineage-proposals#2437']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MV.1.3\"\n",
+      "['MV.1.3', 'sars-cov-2-variants/lineage-proposals#2341']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MV.1.4\"\n",
+      "['MV.1.4', 'sars-cov-2-variants/lineage-proposals#2419']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"NA.2\"\n",
+      "['NA.2', 'sars-cov-2-variants/lineage-proposals#2466']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"XEC.2.2.1+XEC.3+XEC.5+XEC.6+XEC.7+XEC.8.1+XEC.10+XEC.11+XEC.11.1+XEC.13+XEC.16+XEC.17+XEC.20.1+XEC.21+XEC.22+XEC.24.1+XEC.26+XEK.4+XEK.6\"\n",
+      "['XEC.2.2.1', 'sars-cov-2-variants/lineage-proposals#2088']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"XEC.27\"\n",
+      "['XEC.27', 'sars-cov-2-variants/lineage-proposals#2443']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"XFG.1\"\n",
+      "['XFG.1', 'sars-cov-2-variants/lineage-proposals#2560']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"XFG.2\"\n",
+      "['XFG.2', 'sars-cov-2-variants/lineage-proposals#2553']\n"
      ]
     }
    ],
@@ -527,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 11,
    "id": "1c9369e1",
    "metadata": {},
    "outputs": [
@@ -535,9 +503,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Add  1  references from cov-lineages/pango-designation.\n",
+      "Add  0  references from cov-lineages/pango-designation.\n",
       "Upgrade  0  references from cov-lineages/pango-designation.\n",
-      "Add  40  references from sars-cov-2-variants/lineage-proposals.\n"
+      "Add  23  references from sars-cov-2-variants/lineage-proposals.\n"
      ]
     }
    ],
